fixed safari/ios notice button bug and adjusted menu alignment

--- a/css/darkMode/global.css
+++ b/css/darkMode/global.css
@@ -61,6 +61,11 @@ input[type="text"], input[type="password"], textarea, select {
 	border: 1px solid #ccc;
 	color:rgba(255, 255, 255, 0.8);
 }
+
+input:read-only.toggle-notice {
+	background-color: transparent !important;
+}
+
 input:read-only {
   background-color:#999 !important;
 }
@@ -559,13 +564,14 @@ a.light {
 }
 
 #navSubMenu div#nav-drop {
+	position: absolute;
+	transform: translateX(-22.5%);
+	width: auto;
 	visibility: hidden;
 	display: flex;
 	flex-direction: column;
-	position: absolute;
 	overflow: auto;
 	margin-top: 25px;
-	width: auto;
 	z-index: 999;
 	background-color: #0b6a0b;
 	border-radius: 7px;
