--- a/css/desktopOnly/global.css
+++ b/css/desktopOnly/global.css
@@ -58,6 +58,11 @@ input[type="text"], input[type="password"], textarea, select {
 	border: 1px solid #c1c1c1;
 	color:#000000;
 }
+
+input:read-only.toggle-notice {
+	background-color: transparent !important;
+}
+
 input:read-only {
   background-color:#999 !important;
 }
@@ -548,6 +553,7 @@ a.light {
 
 #navSubMenu div#nav-drop {
 	visibility: hidden;
+	transform: translateX(-22.5%);
 	display: flex;
 	flex-direction: column;
 	position: absolute;
