--- a/css/global.css
+++ b/css/global.css
@@ -553,6 +553,7 @@ a.light {
 
 #navSubMenu div#nav-drop {
 	visibility: hidden;
+	transform: translateX(-22.5%);
 	display: flex;
 	flex-direction: column;
 	position: absolute;
